--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,10 @@ hs_err_pid*
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/workspace.xml
+workspace.xml
+APDescription.txt
+*.xml
+.idea/misc.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -89,3 +92,5 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+FoxesAndHares/.idea/workspace.xml
+FoxesAndHares/APDescription.txt
