--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 FoxesAndHares/.idea/workspace.xml
 FoxesAndHares/APDescription.txt
+FoxesAndHares/.idea/workspace.xml
