--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,11 @@ hs_err_pid*
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-*.xml
 .idea/misc.xml
-.idea/**/workspace.xml
-.idea/**/tasks.xml
+*/APDescription.txt
+*/.idea/workspace.xml
+*/.idea/tasks.xml
 .idea/**/usage.statistics.xml
-.idea/**/dictionaries
 .idea/**/shelf
 
 # Generated files
@@ -90,6 +89,3 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-FoxesAndHares/.idea/workspace.xml
-FoxesAndHares/APDescription.txt
-FoxesAndHares/.idea/workspace.xml
