--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ hs_err_pid*
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/misc.xml
+*/.idea/misc.xml
 */APDescription.txt
 */.idea/workspace.xml
 */.idea/tasks.xml
