--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,10 @@ hs_err_pid*
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-*/.idea/misc.xml
-*/APDescription.txt
-*/.idea/workspace.xml
-*/.idea/tasks.xml
+**/.idea/misc.xml
+**/APDescription.txt
+**/.idea/workspace.xml
+**/.idea/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/shelf
 
@@ -46,8 +46,8 @@ hs_err_pid*
 .idea/**/dbnavigator.xml
 
 # Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+**.idea/gradle.xml
+**.idea/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
