--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 *.tar.gz
 *.rar
 
+# JADE
+**/MTPs-Main-Container.txt
+**/APDescription.txt
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
@@ -27,7 +31,6 @@ hs_err_pid*
 
 # User-specific stuff
 **/.idea/misc.xml
-**/APDescription.txt
 **/.idea/workspace.xml
 **/.idea/tasks.xml
 .idea/**/usage.statistics.xml
@@ -46,8 +49,8 @@ hs_err_pid*
 .idea/**/dbnavigator.xml
 
 # Gradle
-**.idea/gradle.xml
-**.idea/libraries
+*/.idea/gradle.xml
+*/.idea/libraries/
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
