--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 *.rar
 
 # JADE
+**/MTPs-Main-Container.txt
 **/APDescription.txt
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
